Handle breaks for Java > 19